...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ImageButton
        android:id="@+id/home_map_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:layout_margin="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/map"
...
